--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body{
     height: 100px;
     background-color:rgb(222, 219, 219);
     margin: 10px 0;
-    color: white;
+    color: black;
     text-align: right;
+    font-size: 50px;
 }
